--- a/src/index.css
+++ b/src/index.css
@@ -51,11 +51,6 @@
     @apply my-3 rounded-lg bg-green-100 p-3 text-green-700;
   }
 
-  /* container */
-  .nike-container {
-    @apply w-11/12 m-auto;
-  }
-
   /* Scroll */
   .scroll-hidden::-webkit-scrollbar {
     display: none;
@@ -120,5 +115,9 @@
   /* tranistions-theme */
   .transitions-theme {
     @apply transition-all duration-700 ease-in-out cursor-pointer;
+  }
+
+  .FormGroup {
+    @apply mt-0 mx-4 mb-5 p-0 border-none bg-transparent rounded;
   }
 }
